[package]
name = "tahoe"
version = "0.1.0"
authors = ["Arda Xi <arda@ardaxi.com>"]

[dependencies]
hyper = "0.11.21"
futures = "0.1.18"
tokio-core = "0.1.12"
url = "1.7.0"
error-chain = "0.11.0"
serde = "1.0.27"
serde_json = "1.0.10"
serde_derive = "1.0.27"
threadpool = "1.0"
log = "0.4"
seahash = "3.0"
